--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -4,8 +4,10 @@ on:
     branches:
       - main
 
+
+
 jobs:
-  build: 
+  build:
     runs-on: ubuntu-18.04
     steps:
       - name: Checkout
@@ -18,15 +20,19 @@ jobs:
         run: chmod +x ./mvnw
         shell: bash
       - name: Build with Maven
+        run: ./mvnw clean install
+        shell: bash
+        
 
-    # UTC가 기준이기 때문에 한국시간으로 맞추려면 +9시간 해야 한다.
+
+
+   # UTC가 기준이기 때문에 한국시간으로 맞추려면 +9시간 해야 한다.
       - name: Get current time
-        uses: 1466587594/get-current-time@v2 
+        uses: 1466587594/get-current-time@v2
         id: current-time
         with:
           format: YYYY-MM-DDTHH-mm-ss
           utcOffset: "+09:00"
-
       - name: Show Current Time
         run: echo "CurrentTime=${{steps.current-time.outputs.formattedTime}}"
         shell: bash
