--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -50,7 +50,7 @@ jobs:
         with:
           aws_access_key: ${{ secrets.AWS_ACCESS_KEY }}
           aws_secret_key: ${{ secrets.AWS_SECRET_KEY }}
-          application_name: aws-devops-eb # 엘리스틱 빈스톡 애플리케이션 이름!
+          application_name: aws-devops_eb # 엘리스틱 빈스톡 애플리케이션 이름!
           environment_name: Awsdevopseb-env # 엘리스틱 빈스톡 환경 이름!
           version_label: aws-v5-${{steps.current-time.outputs.formattedTime}}
           region: ap-northeast-2
